# awr-cli

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: main.rs
