[package]
name = "awr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
error-chain = "0.12.4"
reqwest = "0.11.12"
tokio = { version = "1.21.2", features = ["full"] }
zip = "0.6.3"
